   * Make use of `setproctag()` and `getproctag()` to report parent/child
     process names. [#3084]
   * The global-level `debug_min` setting in `ups.conf` now also applies
     to bumping the debug verbosity of `upsdrvctl` tool. [#3276]
   * If we fail to stop a driver by signal (e.g. PID file was not saved),
     retry to `INSTCMD driver.exit` it by socket protocol. [#3277]

 - `upslog` tool updates:
   * Updated `help()` and failure messages to suggest `-m '*,-'` for logging
     of all known local devices to stdout. [#3083, #2756]

 - `upsmon` client updates:
   * The `SHUTDOWNEXIT` option was not handled properly, and the requested
     long delays did not happen in practice. [issues #2133 and #3084, PR #3086]
   * Make use of `setproctag()` and `getproctag()` to report parent/child
     process names. [#3084]
   * Introduced a `SHUTDOWN_HOSTSYNC` notification message, to report that
     the primary `upsmon` initiated the shutdown and has some secondaries
     to wait for first. [#3084]
   * Make sure an `FSD` notification is issued for each UPS when this primary
     `upsmon` instance sets it (and does not return to usual data processing
     loop to see and report it like secondaries do). This allows a `NOTIFYCMD`
     such as `upssched` on the primary to handle the pending power outage
     (e.g. begin stopping heavy services) even while `upsmon` waits for the
     secondaries to complete their shutdowns and log out of the `upsd` data
     server. [issue #3003, PR #3110]
   * Tickle service watchdog timer (if any) so the `nut-monitor.service` or
     equivalent unit is not killed off due to quietness during shutdown. [#3003]
+
NOTE: If using `upssched` and monitoring multiple UPSes, consider setting up
a `START-TIMER-SHARED` rule with a short (approx. 1 second) timeout to group
several `FSD` notifications into one executed action. [PR #3097]

 - `upsc` has now optional JSON output [issue #3172, PR #3178]
