@@ -53,7 +53,7 @@
 #   different value like "nobody" or "nogroup" would be defaulted for test.
 #
 # Copyright
-#	2022-2025 Jim Klimov <jimklimov+nut@gmail.com>
+#	2022-2026 Jim Klimov <jimklimov+nut@gmail.com>
 #
 # License: GPLv2+
 
@@ -427,7 +427,7 @@ else
 fi
 
 log_info "Locating NUT programs to test:"
-for PROG in upsd upsc dummy-ups upsmon upslog upssched ; do
+for PROG in upsd upsc dummy-ups upsdrvctl upsmon upslog upssched ; do
     (command -v ${PROG}) || (command -v ${PROG}${EXEEXT-}) || die "Useless setup: ${PROG} not found in PATH: ${PATH}"
 done
 
@@ -1359,8 +1359,9 @@ sandbox_start_drivers() {
     if [ -n "${NUT_DEBUG_LEVEL_DRIVERS-}" ]; then
         NUT_DEBUG_LEVEL="${NUT_DEBUG_LEVEL_DRIVERS}"
     fi
-    #execcmd upsdrvctl ${ARG_FG} ${ARG_USER} start dummy &
-    execcmd dummy-ups -a dummy ${ARG_USER} ${ARG_FG} &
+    # Run one driver instance indirectly, to test the upsdrvctl tool too:
+    execcmd upsdrvctl ${ARG_FG} ${ARG_USER} start dummy &
+    #execcmd dummy-ups -a dummy ${ARG_USER} ${ARG_FG} &
     PID_DUMMYUPS="$!"
     log_debug "Tried to start dummy-ups driver for 'dummy' as PID $PID_DUMMYUPS"
 
